--- a/style/cashjs.css
+++ b/style/cashjs.css
@@ -29,6 +29,12 @@ padding: 10px;
   margin: 10px;
 }
 
+.graph-holder{
+  margin: 10px;    
+  display: inline-block;    
+  padding:10px;
+}
+
 /* Style the footer */
 .footer {
 background-color: #fbfbfb;
