--- a/style/cacatoo.css
+++ b/style/cacatoo.css
@@ -2,31 +2,45 @@
 body {
 font-family: Arial, Helvetica, sans-serif;
 background-color: #f0f0f0;
+margin:20px;
 }
 
 
 /* Style the header */
 .header {
-    background-color: #fbfbfb;
+    background-color: #65818a;
     border: 0px solid #FFFFFF;
-    box-shadow: 3px 1px 0px #88888844;
+    box-shadow: 3px 1px 0px #24242444;
     border-radius: 15px 15px 0px 0px;
     padding: 10px;
     text-align: center;
     font-size: 20px;
+    color:#ffffff;
 }
 
 /* Content (grid, graphs, sliders) */
 .content {
   text-align: center;
-  box-shadow: 3px 1px 0px #88888844;
+  box-shadow: 3px 1px 0px #24242444;
   /*border-bottom: 1px dashed #88888844;*/
   background-color: #fbfbfb;
   padding: 10px;
 }
 
+/* Style the footer */
+.footer {
+  background-color: #fbfbfb;
+  border: 0px solid #FFFFFF;
+  box-shadow: 3px 1px 0px #24242444;
+  border-radius: 0px 0px 15px 15px;
+  padding: 10px;
+  text-align: center;
+  font-size: 8px;
+}
+
 .grid-holder{
   margin: 10px;
+  display: inline-block;
 }
 
 .graph-holder{
@@ -35,15 +49,5 @@ background-color: #f0f0f0;
   padding:10px;
 }
 
-/* Style the footer */
-.footer {
-  background-color: #fbfbfb;
-  border: 0px solid #FFFFFF;
-  box-shadow: 3px 1px 0px #88888844;
-  box-shadow: 3px 1px 0px #88888844;
-  border-radius: 0px 0px 15px 15px;
-  padding: 10px;
-  text-align: center;
-  font-size: 8px;
-}
+
 
