--- a/style/cacatoo.css
+++ b/style/cacatoo.css
@@ -5,14 +5,6 @@ background-color: #f0f0f0;
 margin:20px;
 }
 
-button {
-  background-color: rgb(171, 228, 230);
-  border-radius: 10px; 
-  border:1px solid grey;
-  padding:5px;
-  margin:10px;
-  width:200px;
-}
 /* Style the header */
 .header {
     background-color: #65818a;
@@ -50,11 +42,41 @@ button {
   display: inline-block;
 }
 
+.form-container{  /* Sliders and buttons */
+  display: inline-block;
+}
+
 .graph-holder{
   margin: 10px;    
   display: inline-block;    
   padding:10px;
 }
 
+/* The button itself */
+button {
+  background-color: rgb(171, 228, 230);
+  border-radius: 10px; 
+  border:1px solid grey;
+  padding:5px;
+  margin:10px;
+  width:128px;
+}
+/* The slider itself */
+.slider {
+  -webkit-appearance: none;  /* Override default CSS styles */
+  appearance: none;
+  width: 50%; /* Full-width */
+  
+  height: 10px; /* Specified height */
+  background: #d3d3d3; /* Grey background */
+  outline: none; /* Remove outline */
+  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+  transition: opacity .2s;
+}
 
+/* Mouse-over effects */
+.slider:hover {
+  opacity: 1; /* Fully shown on mouse-over */
+}
 
