--- a/style/cacatoo.css
+++ b/style/cacatoo.css
@@ -26,6 +26,20 @@ margin:20px;
   padding: 10px;
 }
 
+/* Output div */
+.output {
+  border-radius: 8px 8px 8px 8px;
+  margin: 30px;
+  height:300px;
+  overflow-y: scroll;
+  font-size: 11px;
+  text-align: left;
+  background-color: #000000;
+  color: #00FF00;
+  /*border-bottom: 1px dashed #88888844;*/
+  padding: 30px;
+}
+
 /* Style the footer */
 .footer {
   background-color: #fbfbfb;
@@ -70,6 +84,18 @@ button {
   height: 10px; /* Specified height */
   background: #d3d3d3; /* Grey background */
   outline: none; /* Remove outline */
+  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+  transition: opacity .2s;
+}
+/* The number input */
+.number {
+  -webkit-appearance: none;  /* Override default CSS styles */
+  appearance: none;
+  width: 50%; /* Full-width */
+  margin-top:10px;
+  height: 30px; /* Specified height */
+  background: #FFFFFF; /* Grey background */  
   opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
   -webkit-transition: .2s; /* 0.2 seconds transition on hover */
   transition: opacity .2s;
