--- a/docs/styles/jsdoc-default.css
+++ b/docs/styles/jsdoc-default.css
@@ -36,6 +36,7 @@ body
     font-family: 'Open Sans', sans-serif;
     line-height: 1.5;
     color: #4d4e53;
+    margin: 50px;
     background-color: white;
 }
 
