--- a/docs/styles/jsdoc-default.css
+++ b/docs/styles/jsdoc-default.css
@@ -34,9 +34,9 @@ html
 body
 {
     font-family: 'Open Sans', sans-serif;
-    line-height: 1.5;
+    line-height: 1.7;
     color: #4d4e53;
-    margin: 50px;
+    margin: 4%;
     background-color: white;
 }
 
@@ -72,7 +72,7 @@ tt, code, kbd, samp {
 
 #main {
     float: left;
-    width: 70%;
+    width: 60%;
 }
 
 article dl {
