--- a/docs/styles/jsdoc-default.css
+++ b/docs/styles/jsdoc-default.css
@@ -30,7 +30,13 @@ html
     background-color: #fff;
     font-size: 14px;
 }
-
+pre code {
+    background-color: #eee;
+    border: 1px solid #999;
+    display: inline-block;
+    padding: 20px;
+    font-size: 9px;
+  }
 body
 {
     font-family: 'Open Sans', sans-serif;
