--- a/style/cacatoo.css
+++ b/style/cacatoo.css
@@ -66,6 +66,9 @@ body {
     display: inline-block;    
     padding:10px;
   }
+  .dygraph-label.dygraph-title{
+    font-size:12px;
+  }
   
   /* The button itself */
   button {
