--- a/style/cacatoo.css
+++ b/style/cacatoo.css
@@ -10,10 +10,17 @@ body {
       border: 0px solid #FFFFFF;
       box-shadow: 3px 1px 0px #24242444;
       border-radius: 15px 15px 0px 0px;
-      padding: 10px;
+      padding: 5px;
       text-align: center;
       font-size: 20px;
       color:#ffffff;
+  }
+  .logos{
+    float:left;
+    vertical-align:middle;    
+    display:inline-block;
+    padding-left:10px;
+    padding-top:10px;
   }
   
   /* Content (grid, graphs, sliders) */
