--- a/docs/styles/jsdoc-default.css
+++ b/docs/styles/jsdoc-default.css
@@ -211,15 +211,23 @@ table
 }
 
 td, th
-{
-    border: 1px solid #ddd;
+{    
     margin: 0px;
     text-align: left;
     vertical-align: top;
     padding: 4px 6px;
     display: table-cell;
 }
-
+/* The button itself */
+button {
+    background-color: rgb(217, 234, 245);
+    border-radius: 10px; 
+    border: 2px solid rgb(177, 209, 231);;
+    padding:7px;
+    font-size:12px;
+    margin:10px;
+    width:128px;
+  }
 thead tr
 {
     background-color: #ddd;
