--- a/style/cacatoo.css
+++ b/style/cacatoo.css
@@ -29,42 +29,57 @@ body {
   }
 
   .example_card{    
-    width: 180px;
-    height: 202px;
-    background-color: rgb(111, 146, 170);
+    width: 220px;
+    height: 220px;
+    background-color: rgb(151, 183, 204);
     box-shadow: rgba(100, 100, 111, 0.1) 20px 7px 29px 0px;
     /* font-weight: bold; */
-    color:#FFFFFF;
-    font-size:13px;        
-    margin: 15px;    
-    padding-top: 5px;
-    border: 2px solid #FFFFFF;
-    border-radius: 10px 0px 10px 0px;
+    color: rgb(229, 239, 245);
+    font-size:12px;     
+    line-height:25px;   
+    margin: 25px;    
+    padding: 20px;    
+    padding-bottom:40px;
+    padding-top:10px;
+    border-radius: 0px 0px 0px 0px;
     display:inline-block;   
-    /*transition: all 100ms ease-out 200ms; */
+    transition: all 100ms ease-out 200ms; 
+    transition-delay: 0s;
   }
   .example_card_img{    
-    width: 180px;
-    height: 180px;
-    margin-top: 5px;
-    border: 0px solid #FFFFFF;
-    border-radius: 8px 0px 8px 0px;
-
+    width: 100%;
+    height: 100%;       
+    border-radius: 0px 0px 0px 0px;
+    background-position: 45% 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
   .example_card:hover{        
     background-color: rgb(151, 183, 204);
-    /*color:#000000;*/
+    font-size:12px;    
+    color:black;
+    border-radius: 30px 0px 30px 0px;
     box-shadow: rgba(100, 100, 111, 0.3) 0px 0px 29px 0px;
   }
    .example_card:active{        
     background-color: rgb(151, 183, 204);
-    font-size:11px;
-    padding-top:8px;
-    color: rgb(207, 223, 233);;
+    font-size:12px;
+    padding-top: 11px;
+    height: 199px;    
+    color:black;
     box-shadow: rgba(100, 100, 111, 0.3) 0px 0px 29px 0px;
   }
   
-  
+  .grid-holder{
+    display: inline-block;
+    margin:10px;
+  }
+  .canvas-cacatoo{
+    display: inline-block;
+    border: 4px solid black;
+    border-radius: 8px 8px 8px 8px;
+    margin:10px;
+  }
   /* Content (grid, graphs, sliders) */
   .content {
     text-align: center;
@@ -99,10 +114,7 @@ body {
     font-size: 8px;
   }
   
-  .grid-holder{
-    margin: 10px;
-    display: inline-block;
-  }
+ 
   
   .form-container{  /* Sliders and buttons */
     display: inline-block;
@@ -162,3 +174,4 @@ input[type=number] {
 .slider:hover {
   opacity: 1; /* Fully shown on mouse-over */
 }
+
