--- a/docs/styles/jsdoc-default.css
+++ b/docs/styles/jsdoc-default.css
@@ -30,6 +30,22 @@ html
     background-color: #fff;
     font-size: 14px;
 }
+.grid-holder{
+    display: inline-block;
+    margin:10px;
+  }
+.canvas-cacatoo{
+    display: inline-block;
+    border: 4px solid black;
+    border-radius: 8px 8px 8px 8px;
+    margin:10px;
+  }
+  .canvas-cacatoo-round{
+    display: inline-block;
+    border: 4px solid black;
+    border-radius: 50% 50% 50% 50%;
+    margin:10px;
+  }
 pre code {
     background-color: #eee;
     border: 1px solid #999;
