--- a/docs/styles/menu.css
+++ b/docs/styles/menu.css
@@ -31,6 +31,7 @@ body {
 .header__button > i {
     font-size: 36px;
 }
+
 /* The button itself */
 button {
     background-color: rgb(217, 234, 245);
@@ -106,7 +107,6 @@ h1 {
 .nav__link {
     display: flex;
     align-items: center;
-    color:#555555;
     font-weight:bold;
     font-size: 13 px;
     text-decoration:none;
@@ -142,6 +142,66 @@ h1 {
 .nav--open .nav__overlay {
     visibility: visible;
     opacity: 1;
+}
+
+
+
+@media only screen and (hover: none) and (pointer: coarse){    
+    body{
+        margin: var(--header-height) 0 0 0;
+        font-family: sans-serif;
+        font-size:18px;
+        margin: 2% 2% 0% 2%;
+        background: none;
+        padding: 64px 15px;
+    }
+    .header{
+        position:fixed;
+        height: 128px;
+        top:0;
+        left:0;
+        width:100%;
+        background-color: rgb(111, 146, 170);
+        padding: 7px 10px;
+    }
+    
+	.header__button {
+		width: var(--header-height);
+        font-size: 80px;
+        background: none;
+        margin-left: 15px;
+        outline: none;
+        border: none;
+        color: white;
+        cursor: pointer;
+	}
+    .header__button > i {
+		width: var(--header-height);
+        font-size: 64px;
+        background: none;
+        outline: none;
+        border: none;
+        color: white;
+        cursor: pointer;
+	}
+    .nav__links {
+        position:fixed;
+        top:0;
+        left:0;
+        z-index:1000;
+        height:100%;
+        width:75%;
+        background:white;
+        transform: translateX(-100%);
+        transition: transform 0.3s;
+        font-weight:bold;
+        font-size:48px;
+        padding: 5px 5px;    
+    }
+    .nav__head > i{
+        margin-right: 15px;
+        font-size: 64px;
+    }
 }
 
 .cacatoo-content {
