Updated docs with JSfiddle examples

--- a/docs/styles/menu.css
+++ b/docs/styles/menu.css
@@ -278,3 +278,45 @@ button {
     width:128px;
   }
   
+  .example_card{    
+    width: 220px;
+    height: 220px;
+    background-color: rgb(151, 183, 204);
+    box-shadow: rgba(100, 100, 111, 0.1) 20px 7px 29px 0px;
+    font-weight: bold;
+    color: black;
+    font-size:13px;     
+    line-height:25px;   
+    margin: 25px;    
+    padding: 20px;    
+    padding-bottom:40px;
+    padding-top:10px;
+    border-radius: 0px 0px 0px 0px;
+    display:inline-block;   
+    transition: all 100ms ease-out 200ms; 
+    transition-delay: 0s;
+  }
+  .example_card_img{    
+    width: 100%;
+    height: 100%;       
+    border-radius: 0px 0px 0px 0px;
+    background-position: 45% 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .example_card:hover{        
+    background-color: rgb(151, 183, 204);
+    font-size:12px;    
+    color:black;
+    border-radius: 30px 0px 30px 0px;
+    box-shadow: rgba(100, 100, 111, 0.3) 0px 0px 29px 0px;
+  }
+   .example_card:active{        
+    background-color: rgb(151, 183, 204);
+    font-size:12px;
+    padding-top: 11px;
+    height: 199px;    
+    color:black;
+    box-shadow: rgba(100, 100, 111, 0.3) 0px 0px 29px 0px;
+  }
+  
